--- a/app/src/main/res/layout/recipesrowarticle.xml
+++ b/app/src/main/res/layout/recipesrowarticle.xml
@@ -29,6 +29,12 @@
             android:orientation="horizontal"
             >
 
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/image_recipe"
+                android:src="@drawable/main"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
