--- a/app/src/main/res/layout/recipesrowarticle.xml
+++ b/app/src/main/res/layout/recipesrowarticle.xml
@@ -29,11 +29,11 @@
             android:orientation="horizontal"
             >
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/image_recipe"
-                android:src="@drawable/main"/>
+<!--            <ImageView-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:id="@+id/image_recipe"-->
+<!--                android:src="@drawable/main"/>-->
 
             <TextView
                 android:layout_width="wrap_content"
