--- a/app/src/main/res/layout/activity_manual_recipe.xml
+++ b/app/src/main/res/layout/activity_manual_recipe.xml
@@ -156,6 +156,12 @@
                 >
 
                 <!--Ingredients-->
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp"
+                    app:cardCornerRadius="17.0dp"
+                    android:elevation="30.0dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -166,6 +172,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/manualIngredientsHeader"
+                        android:textColor="@color/blue3"
+                        android:textSize="25dp"
                         />
 
                     <LinearLayout
@@ -218,7 +226,14 @@
                     </LinearLayout>
 
                 </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="20dp"
+                    app:cardCornerRadius="17.0dp"
+                    android:elevation="30.0dp">
                 <!--Preparations-->
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -229,7 +244,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/manualPreparationsHeader"/>
+                        android:text="@string/manualPreparationsHeader"
+                        android:textColor="@color/blue3"
+                        android:textSize="25dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -260,6 +277,7 @@
                         android:id="@+id/stagesView"/>
 
                 </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
             </LinearLayout>
 
