--- a/app/src/main/res/layout/activity_view_image_activity.xml
+++ b/app/src/main/res/layout/activity_view_image_activity.xml
@@ -16,6 +16,7 @@
             android:id="@+id/base_include"
             />
 
+<!--        image view-->
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -46,7 +47,7 @@
             android:layout_gravity="center"/>
     </LinearLayout>
 
-
+<!--        web view-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,29 +61,36 @@
 
     </LinearLayout>
 
+<!--        recipe view-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/manual_recipe_layout"
             android:orientation="vertical">
-
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="13">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:id="@+id/viewHeader"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="45dp"
                 android:background="@color/blue2"
                 android:textColor="@color/white"
+                android:layout_weight="2"
                 />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_margin="20dp"
                 app:cardCornerRadius="17.0dp"
-                android:elevation="30.0dp">
+                android:elevation="30.0dp"
+                android:layout_weight="5">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -105,13 +113,13 @@
             </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_margin="20dp"
                 app:cardCornerRadius="17.0dp"
-                android:elevation="30.0dp">
+                android:elevation="30.0dp"
+                android:layout_weight="5">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -135,6 +143,12 @@
             </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+                </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
@@ -156,7 +170,5 @@
         app:layout_constraintStart_toStartOf="parent"
         >
     </com.google.android.gms.ads.AdView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
