--- a/app/src/main/res/layout/activity_view_image_activity.xml
+++ b/app/src/main/res/layout/activity_view_image_activity.xml
@@ -16,145 +16,179 @@
             android:id="@+id/base_include"
             />
 
-<!--        image view-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/image_layout"
-            android:visibility="gone"
-            >
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:weightSum="12">
+
+            <ImageButton
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/recipe_name"
-                android:layout_gravity="center"
-                android:textSize="25dp"
-                />
-            <ListView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/images_list"/>
-
-            <ProgressBar
-                style="?android:attr/progressBarStyleLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/viewProgressBar"
-                android:progressDrawable="@drawable/circular_progress_bar"
-                android:indeterminateTint="@color/blue2"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="center"/>
-        </LinearLayout>
-
-<!--        web view-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/webLayout"
-            android:visibility="gone"
-            android:orientation="vertical">
-
-            <WebView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/web_recipe_view"/>
-
-        </LinearLayout>
-
-<!--        recipe view-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/manual_recipe_layout"
-            android:orientation="vertical">
+                android:src="@drawable/back_icon"
+                android:id="@+id/back_button"
+                android:onClick="moveBack"
+                android:layout_weight="1"/>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:weightSum="13">
+                android:layout_weight="10">
 
-                <TextView
+                <!--        image view-->
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:id="@+id/viewHeader"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textSize="45dp"
-                    android:background="@color/blue2"
-                    android:textColor="@color/white"
-                    android:layout_weight="2"
-                    />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:id="@+id/image_layout"
+                    android:visibility="gone"
+                    >
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/recipe_name"
+                        android:layout_gravity="center"
+                        android:textSize="25dp"
+                        />
+                    <ListView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/images_list"/>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_margin="20dp"
-                    app:cardCornerRadius="17.0dp"
-                    android:elevation="30.0dp"
-                    android:layout_weight="5">
+                    <ProgressBar
+                        style="?android:attr/progressBarStyleLarge"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/viewProgressBar"
+                        android:progressDrawable="@drawable/circular_progress_bar"
+                        android:indeterminateTint="@color/blue2"
+                        android:layout_alignParentBottom="true"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+
+                <!--        web view-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/webLayout"
+                    android:visibility="gone"
+                    android:orientation="vertical">
+
+                    <WebView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:id="@+id/web_recipe_view"/>
+
+                </LinearLayout>
+
+                <!--        recipe view-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/manual_recipe_layout"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
-                        android:padding="20dp">
+                        android:weightSum="13">
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/manualIngredientsHeader"
-                            android:textSize="25dp"
+                            android:layout_height="0dp"
+                            android:id="@+id/viewHeader"
+                            android:gravity="center"
                             android:textStyle="bold"
-                            android:textColor="@color/blue3"
+                            android:textSize="45dp"
+                            android:background="@color/blue2"
+                            android:textColor="@color/white"
+                            android:layout_weight="2"
                             />
-                        <ListView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/ingredientsView"/>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            android:layout_margin="20dp"
+                            app:cardCornerRadius="17.0dp"
+                            android:elevation="30.0dp"
+                            android:layout_weight="5">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:padding="20dp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/manualIngredientsHeader"
+                                    android:textSize="25dp"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/blue3"
+                                    />
+                                <ListView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/ingredientsView"/>
+
+                            </LinearLayout>
+
+                        </androidx.cardview.widget.CardView>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            android:layout_margin="20dp"
+                            app:cardCornerRadius="17.0dp"
+                            android:elevation="30.0dp"
+                            android:layout_weight="5">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:padding="20dp">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/manualPreparationsHeader"
+                                    android:textSize="25dp"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/blue3"
+                                    />
+
+                                <ListView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/stagesView"/>
+
+                            </LinearLayout>
+
+                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_margin="20dp"
-                    app:cardCornerRadius="17.0dp"
-                    android:elevation="30.0dp"
-                    android:layout_weight="5">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="20dp">
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/manualPreparationsHeader"
-                            android:textSize="25dp"
-                            android:textStyle="bold"
-                            android:textColor="@color/blue3"
-                            />
+                </LinearLayout>
 
-                        <ListView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/stagesView"/>
 
-                    </LinearLayout>
+            </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
-
-           </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/fwd_icon"
+                android:id="@+id/fwd_button"
+                android:onClick="moveFwd"
                 android:layout_weight="1"/>
 
         </LinearLayout>
