--- a/app/src/main/res/layout/fav_recipe_row.xml
+++ b/app/src/main/res/layout/fav_recipe_row.xml
@@ -10,6 +10,14 @@
     >
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/image_course_recipe"/>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -19,7 +27,7 @@
             android:id="@+id/fav_recipe_title"
             android:textSize="20dp"
             android:fontFamily="@font/felixti"
-            android:background="@color/blue2"
+            android:textColor="@color/blue2"
             android:onClick="showRow"
             />
 
@@ -39,6 +47,8 @@
                 android:onClick="showRow"
                 />
         </LinearLayout>
+
+    </LinearLayout>
 
     </LinearLayout>
 
