--- a/app/src/main/res/layout/fav_recipe_row.xml
+++ b/app/src/main/res/layout/fav_recipe_row.xml
@@ -11,44 +11,57 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/image_course_recipe"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:weightSum="10">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/fav_recipe_title"
-            android:textSize="20dp"
-            android:fontFamily="@font/felixti"
-            android:textColor="@color/blue2"
-            android:onClick="showRow"
-            />
-
+        <!--Image Pane-->
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/image_course_recipe"/>
+
+        </LinearLayout>
+
+        <!--Recipe Pane-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="8"
             >
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/fav_recipe_description"
-                android:layout_marginStart="10dp"
+                android:id="@+id/fav_recipe_title"
+                android:textSize="20dp"
                 android:fontFamily="@font/felixti"
-                android:layout_gravity="end"
+                android:textColor="@color/blue2"
                 android:onClick="showRow"
                 />
-        </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/fav_recipe_description"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/felixti"
+                    android:layout_gravity="end"
+                    android:onClick="showRow"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
