--- a/app/src/main/res/layout/activity_manual_recipe.xml
+++ b/app/src/main/res/layout/activity_manual_recipe.xml
@@ -342,7 +342,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/test_id"
+        ads:adUnitId="@string/create_manual_recipe"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
